--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "firebase": "^9.4.0",
+    "graphql": "^16.1.0",
+    "graphql-tag": "^2.12.6",
+    "mongodb": "^4.2.1",
     "package.json": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "realm-web": "^1.5.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
